<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ssd_form_firstname_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:minHeight="?android:attr/actionBarSize"
            app:errorTextAppearance="@style/PaymentScreens.TextAppearance.ErrorSmallItem">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ssd_form_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:drawableEnd="@drawable/ic_person_black"
                android:drawableRight="@drawable/ic_person_black"
                android:drawablePadding="@dimen/spacing_double"
                android:hint="@string/sdd_firstname"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords|textNoSuggestions"
                android:maxLength="30"
                android:maxLines="1"
                android:textColorHint="@color/hpf_placeholder"
                android:textSize="@dimen/size_edit_text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ssd_form_lastname_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:minHeight="?android:attr/actionBarSize"
            app:errorTextAppearance="@style/PaymentScreens.TextAppearance.ErrorSmallItem">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ssd_form_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:drawableEnd="@drawable/ic_person_black"
                android:drawableRight="@drawable/ic_person_black"
                android:drawablePadding="@dimen/spacing_double"
                android:hint="@string/sdd_lastname"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords|textNoSuggestions"
                android:maxLength="30"
                android:maxLines="1"
                android:textColorHint="@color/hpf_placeholder"
                android:textSize="@dimen/size_edit_text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ssd_form_iban_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:minHeight="?android:attr/actionBarSize"
            app:errorTextAppearance="@style/PaymentScreens.TextAppearance.ErrorSmallItem">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ssd_form_iban"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:drawableEnd="@drawable/ic_payment_iban"
                android:drawableRight="@drawable/ic_payment_iban"
                android:hint="@string/sdd_iban"
                android:imeOptions="actionDone"
                android:inputType="textCapWords|textNoSuggestions"
                android:maxLength="30"
                android:maxLines="1"
                android:textColorHint="@color/hpf_placeholder"
                android:textSize="@dimen/size_edit_text" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_margin="@dimen/spacing_double"
        android:layout_weight="0">

        <FrameLayout
            android:id="@+id/pay_button_layout"
            style="@style/PaymentScreens.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:enabled="false"
            android:visibility="gone">

            <Button
                android:id="@+id/pay_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:background="@null"
                android:clickable="false"
                android:drawableStart="@drawable/ic_lock_black"
                android:drawableLeft="@drawable/ic_lock_black"
                android:drawablePadding="@dimen/spacing_normal"
                android:drawableTint="@color/hpf_light"

                android:enabled="false"
                android:focusable="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:textAppearance="@style/PaymentScreens.TextAppearance.AmountItem" />

        </FrameLayout>

        <ProgressBar
            android:id="@+id/empty"
            android:layout_width="@dimen/min_height_touch_target"
            android:layout_height="@dimen/min_height_touch_target"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

    </RelativeLayout>
</LinearLayout>